Hämtar brands istället för fiskar

--- a/MeasureMyPike.Web/App/MeasureMyPike/src/app/app.component.html
+++ b/MeasureMyPike.Web/App/MeasureMyPike/src/app/app.component.html
@@ -3,7 +3,7 @@
     <h1>
         {{title}}
     </h1>
-    <app-fish-view></app-fish-view>
+    <app-brand-view></app-brand-view>
 
     <h2>Here are some links to help you start: </h2>
     <h2><a target="_blank" href="https://angular.io/tutorial">Tour of Heroes</a></h2>
