Mästerlig front-end

--- a/MeasureMyPike.Web/App/MeasureMyPike/src/app/view/brand-view/brand-view.component.html
+++ b/MeasureMyPike.Web/App/MeasureMyPike/src/app/view/brand-view/brand-view.component.html
@@ -1,9 +1,13 @@
 ﻿<h2>Dragmärken:</h2>
 <div>
     <ul class="list-group">
-        <li class="list-group-item list-group-item-action" *ngFor="let brand of brandList" (click)="onRowClicked(brand)"><p>{{brand.name}}</p></li>
+        <li class="list-group-item list-group-item-action clickable" [class.nodeselected]="selectedBrand?.name == brand.name" *ngFor="let brand of brandList" (click)="selectBrand(brand)">
+            <p>{{brand.name}}</p>
+        </li>
     </ul>
 </div>
 <div>
-    <p>{{selectedBrand}}</p>
+    <br/>
+    <p class="center-align">Valt märke:</p>
+    <p class="center-align">{{selectedBrand?.name}}</p>
 </div>
