--- a/MeasureMyPike.Web/App/MeasureMyPike/src/app/view/brand-view/brand-view.component.scss
+++ b/MeasureMyPike.Web/App/MeasureMyPike/src/app/view/brand-view/brand-view.component.scss
@@ -1,10 +1,17 @@
-﻿ul {
-     display:table; margin:0 auto;
+﻿.list-group {
+     display:table; 
+     margin:0 auto;
 }
+
 p {
     margin: 5px 5px 5px 5px;
     text-align: left;
 }
+
+.center-align{
+    text-align: center;
+}
+
 li.list-group-item{
     padding-bottom: 2px;
     padding-top: 2px;
