--- a/MeasureMyPike.Web/App/MeasureMyPike/src/app/app.component.html
+++ b/MeasureMyPike.Web/App/MeasureMyPike/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--The whole content below can be removed with the new code.-->
 <div style="text-align:center">
-    <h1>
+    <h1 class="unselectable">
         {{title}}
     </h1>
     <app-brand-view></app-brand-view>
