--- a/MeasureMyPike.Web/App/MeasureMyPike/src/app/view/brand-view/brand-view.component.scss
+++ b/MeasureMyPike.Web/App/MeasureMyPike/src/app/view/brand-view/brand-view.component.scss
@@ -3,6 +3,13 @@
      margin:0 auto;
 }
 
+.list-group-item{
+    padding-bottom: 2px;
+    padding-top: 2px;
+    padding-right: 10px;
+    padding-right: 10px;
+}
+
 p {
     margin: 5px 5px 5px 5px;
     text-align: left;
@@ -10,11 +17,4 @@ p {
 
 .center-align{
     text-align: center;
-}
-
-li.list-group-item{
-    padding-bottom: 2px;
-    padding-top: 2px;
-    padding-right: 10px;
-    padding-right: 10px;
 }
