--- a/MeasureMyPike.Web/App/MeasureMyPike/src/Main.scss
+++ b/MeasureMyPike.Web/App/MeasureMyPike/src/Main.scss
@@ -5,3 +5,11 @@
     -ms-user-select: none;
     user-select: none;
 }
+
+.centered-div {
+    padding: 0px 0px 0px 0px;
+    margin: auto;
+    width: 100%;
+    max-width: 310px;
+    text-align: left;
+}
