--- a/MeasureMyPike.Web/App/MeasureMyPike/src/app/app.component.html
+++ b/MeasureMyPike.Web/App/MeasureMyPike/src/app/app.component.html
@@ -1,8 +1,11 @@
 <!--The whole content below can be removed with the new code.-->
-<div style="text-align:center">
-    <h1 class="unselectable">
-        {{title}}
-    </h1>
-    <app-brand-view></app-brand-view>
+<div style="height:100%;">
+    <div class="centered-div" style="height:7%;">
+        <h1 class="unselectable" style="text-decoration:underline;">
+            {{title}}
+        </h1>
+    </div>
+    <div>
+        <app-brand-view></app-brand-view>
+    </div>
 </div>
-
