--- a/MeasureMyPike.Web/App/MeasureMyPike/src/app/view/brand-view/brand-view.component.scss
+++ b/MeasureMyPike.Web/App/MeasureMyPike/src/app/view/brand-view/brand-view.component.scss
@@ -1,20 +1,22 @@
 ﻿.list-group {
      display:table; 
      margin:0 auto;
+     width: 100%;
 }
 
 .list-group-item{
     padding-bottom: 2px;
     padding-top: 2px;
-    padding-right: 10px;
-    padding-right: 10px;
+    padding-left: 2px;
+    padding-right: 2px;
+
+    p{
+        margin: 5px 5px 5px 5px;
+    }
 }
 
 p {
-    margin: 5px 5px 5px 5px;
-    text-align: left;
-}
+    font-size: 16px;
+    margin: 0px 0px 0px 0px;
 
-.center-align{
-    text-align: center;
 }
