--- a/MeasureMyPike.Web/App/MeasureMyPike/src/app/app.component.html
+++ b/MeasureMyPike.Web/App/MeasureMyPike/src/app/app.component.html
@@ -5,7 +5,7 @@
             {{title}}
         </h1>
     </div>
-    <div>
+    <div style="text-align: center; height: 90%">
         <app-brand-view></app-brand-view>
     </div>
 </div>
