Fixat registrera användare i frontend, ska fixa anropet i backend.
Tagit bort bootstrap, lagt till angular materials.

Fixat ett "eget" grid-system i main.scss.

--- a/MeasureMyPike.Web/App/MeasureMyPike/src/app/app.component.html
+++ b/MeasureMyPike.Web/App/MeasureMyPike/src/app/app.component.html
@@ -1,11 +1,11 @@
 <!--The whole content below can be removed with the new code.-->
-<div style="height:100%;">
-    <div class="centered-div" style="height:7%;">
-        <h1 class="unselectable" style="text-decoration:underline;">
-            {{title}}
-        </h1>
+<div class="grid-container">
+    <div class="row">
+        <div class="col-6">
+            <h1>
+                {{title}}
+            </h1>
+        </div>
     </div>
-    <div style="text-align: center; height: 90%">
-        <app-brand-view></app-brand-view>
-    </div>
+    <app-user-view></app-user-view>
 </div>
