Fixat in md-input-containers och grid-system

--- a/MeasureMyPike.Web/App/MeasureMyPike/src/Main.scss
+++ b/MeasureMyPike.Web/App/MeasureMyPike/src/Main.scss
@@ -6,7 +6,9 @@ body {
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
-    user-select: none;
+    /*user-select: none;
+    padding: 0;
+    margin: 0;*/
 }
 
 input,
@@ -18,68 +20,118 @@ textarea {
     line-height: inherit;
 }
 
-.grid-container{
-    width: 100%; 
-    max-width: 1200px;      
+.grid-container {
+    width: 100%;
+    max-width: 1920px;
 }
 
-/*-- our cleafix hack -- */ 
-.row:before, 
+/*-- our cleafix hack -- */
+.row:before,
 .row:after {
-    content:"";
-        display: table ;
-    clear:both;
+    content: "";
+    display: table;
+    clear: both;
 }
 
 [class*='col-'] {
-    float: left; 
-    min-height: 1px; 
-    width: 16.66%; 
+    float: left;
+    min-height: 1px;
+    width: 16.66%;
     /*-- our gutter -- */
-    padding: 12px; 
+    /*padding: 12px;*/
 }
 
-.col-1{ width: 16.66%; }
-.col-2{ width: 33.33%; }
-.col-3{ width: 50%;    }
-.col-4{ width: 66.66%; }
-.col-5{ width: 83.33%; }
-.col-6{ width: 100%;   }
+.col-1 {
+    width: 16.66%;
+}
 
-.outline, .outline *{
-    outline: 1px solid #F6A1A1; 
+.col-2 {
+    width: 33.33%;
+}
+
+.col-3 {
+    width: 50%;
+}
+
+.col-4 {
+    width: 66.66%;
+}
+
+.col-5 {
+    width: 83.33%;
+}
+
+.col-6 {
+    width: 100%;
+}
+
+.outline, .outline * {
+    outline: 1px solid #F6A1A1;
 }
 
 /*-- some extra column content styling --*/
 [class*='col-'] > p {
     padding: 0;
     margin: 0;
-    text-align: center; 
-    color: white; 
+    /*color: white;*/
 }
 
-@media all and (max-width:800px){
-    .col-1{ width: 33.33%;    }
-    .col-2{ width: 50%;        }
-    .col-3{ width: 83.33%;    }
-    .col-4{ width: 100%;    }
-    .col-5{ width: 100%;    }
-    .col-6{ width: 100%;      }
-
-    .row .col-2:last-of-type{
-        width: 100%; 
+@media all and (max-width:800px) {
+    .col-1 {
+        width: 33.33%;
     }
 
-    .row .col-5 ~ .col-1{
-        width: 100%; 
+    .col-2 {
+        width: 50%;
+    }
+
+    .col-3 {
+        width: 83.33%;
+    }
+
+    .col-4 {
+        width: 100%;
+    }
+
+    .col-5 {
+        width: 100%;
+    }
+
+    .col-6 {
+        width: 100%;
+    }
+
+    .row .col-2:last-of-type {
+        width: 100%;
+    }
+
+    .row .col-5 ~ .col-1 {
+        width: 100%;
     }
 }
 
-@media all and (max-width:650px){
-        .col-1{ width: 50%;        }
-        .col-2{ width: 100%;    }
-        .col-3{ width: 100%;    }
-        .col-4{ width: 100%;    }
-        .col-5{ width: 100%;    }
-        .col-6{ width: 100%;      }
+@media all and (max-width:650px) {
+    .col-1 {
+        width: 50%;
     }
+
+    .col-2 {
+        width: 100%;
+    }
+
+    .col-3 {
+        width: 100%;
+    }
+
+    .col-4 {
+        width: 100%;
+    }
+
+    .col-5 {
+        width: 100%;
+    }
+
+    .col-6 {
+        width: 100%;
+    }
+}
