--- a/MeasureMyPike.Web/App/MeasureMyPike/src/app/app.component.html
+++ b/MeasureMyPike.Web/App/MeasureMyPike/src/app/app.component.html
@@ -1,11 +1,20 @@
 <!--The whole content below can be removed with the new code.-->
-<div class="grid-container">
-    <div class="row">
-        <div class="col-6">
-            <h1>
-                {{title}}
-            </h1>
-        </div>
+<md-sidenav-container class="example-container">
+    <md-sidenav #sidenav class="example-sidenav">
+        Jolly good!
+    </md-sidenav>
+
+    <div class="example-sidenav-content">
+        <button type="button" md-button (click)="sidenav.open()">
+            Open sidenav
+        </button>
     </div>
-    <app-user-view></app-user-view>
-</div>
+
+    <div class="grid-container">
+        <h1>
+            {{title}}
+        </h1>
+        <app-brand-view></app-brand-view>
+        <app-user-view></app-user-view>
+    </div>
+</md-sidenav-container>
