--- a/MeasureMyPike.Web/App/MeasureMyPike/src/app/view/brand-view/brand-view.component.html
+++ b/MeasureMyPike.Web/App/MeasureMyPike/src/app/view/brand-view/brand-view.component.html
@@ -1,15 +1,30 @@
-﻿<div style="height: 8%;">
-    <h2>Dragmärken:</h2>
+﻿
+<h3>Dragmärken:</h3>
+
+<div class="row">
+    <div class="col-6" style="overflow: scroll; overflow-x: hidden; max-height: 400px; max-width: 400px;">
+        <ul class="list-group">
+            <li class="list-group-item" [class.active]="selectedBrand?.id == brand.id" *ngFor="let brand of brandList" (click)="getBrand(brand)">
+                <p>{{brand.name}}</p>
+            </li>
+        </ul>
+    </div>
 </div>
-<div style="height: 60%; overflow: scroll; overflow-x: hidden; border-bottom: solid;">
-    <ul class="list-group">
-        <li [class.active]="selectedBrand?.id == brand.id" *ngFor="let brand of brandList" (click)="getBrand(brand)">
-            <p>{{brand.name}}</p>
-        </li>
-    </ul>
-</div>
-<div *ngIf="selectedBrand != null" style="height:22%; padding-top: 0.2%;">
-    <p>Valt märke: <b>{{selectedBrand.name}}</b></p>
-    <input type="text" [(ngModel)]="newName" name="newName" placeholder="Nytt namn" />
-    <input type="submit" value="Ändra" (click)="updateBrand()" />
+
+<div>
+    <div class="row" *ngIf="selectedBrand != null">
+        <div class="col-6">
+            <p>Valt märke: <b>{{selectedBrand.name}}</b></p>
+        </div>
+    </div>
+    <div class="row" *ngIf="selectedBrand != null">
+        <form name="brandChange">
+            <div class="col-6">
+                <md-input-container>
+                    <input mdInput type="text" [(ngModel)]="newName" name="newName" placeholder="Nytt namn" />
+                </md-input-container>
+                <button md-raised-button [disabled]="newName == null" (click)="updateBrand()">Ändra</button>
+            </div>
+        </form>
+    </div>
 </div>
