--- a/MeasureMyPike.Web/App/MeasureMyPike/src/app/view/brand-view/brand-view.component.scss
+++ b/MeasureMyPike.Web/App/MeasureMyPike/src/app/view/brand-view/brand-view.component.scss
@@ -1,21 +1,10 @@
-﻿.list-group {
-     display:table; 
-     margin:0 auto;
-     width: 100%;
-}
-
-.list-group-item {
+﻿.list-group-item {
     padding-bottom: 2px;
     padding-top: 2px;
     padding-left: 2px;
     padding-right: 2px;
 
     p {
-        margin: 5px 5px 5px 5px;
+        margin: 0px 0px 0px 0px;
     }
-}
-
-p {
-    font-size: 16px;
-    margin: 0px 0px 0px 0px;
 }
