--- a/MeasureMyPike.Web/App/MeasureMyPike/src/app/view/user-view/user-view.component.html
+++ b/MeasureMyPike.Web/App/MeasureMyPike/src/app/view/user-view/user-view.component.html
@@ -1,38 +1,61 @@
-﻿<div class="row">
-    <div class="col-6">
-        <h2>Registrera ny användare:</h2>
-    </div>
-</div>
+﻿<h3>Registrera ny användare:</h3>
 
-<form name="userForm">
-    <div class="row">
-        <div class="col-3">
-            <md-input-container>
-                <input mdInput type="text" [(ngModel)]="firstName" name="firstName" placeholder="Förnamn" maxlength="25" minlength="2">
-            </md-input-container>
+<div [hidden]="submitted">
+    <form name="userForm">
+        <div class="row">
+            <div class="col-6">
+                <md-input-container>
+                    <span mdTooltip="2-25 tecken">
+                        <input mdInput type="text" [(ngModel)]="firstName" name="firstName" placeholder="Förnamn" maxlength="25" minlength="2">
+                    </span>
+                </md-input-container>
+            </div>
         </div>
-        <div class="col-3">
-            <md-input-container>
-                <input mdInput type="text" [(ngModel)]="lastName" name="lastName" placeholder="Efternamn" maxlength="25" minlength="2">
-            </md-input-container>
+        <div class="row">
+            <div class="col-6">
+                <md-input-container>
+                    <span mdTooltip="2-25 tecken">
+                        <input mdInput type="text" [(ngModel)]="lastName" name="lastName" placeholder="Efternamn" maxlength="25" minlength="2">
+                    </span>
+                </md-input-container>
+            </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-3">
-            <md-input-container>
-                <input mdInput type="text" [(ngModel)]="username" name="username" placeholder="Användarnamn" maxlength="20" minlength="4">
-            </md-input-container>
+
+        <div class="row">
+            <div class="col-6">
+                <md-input-container>
+                    <span mdTooltip="4-20 tecken">
+                        <input mdInput type="text" [(ngModel)]="username" name="username" placeholder="Användarnamn" maxlength="20" minlength="4">
+                    </span>
+                </md-input-container>
+            </div>
         </div>
-        <div class="col-3">
-            <md-input-container>
-                <input mdInput class="form-control" type="text" [type]="showPassword.checked ? 'text' : 'password'" [(ngModel)]="password" name="password" placeholder="Lösenord (4-20 tecken)" maxlength="20" minlength="4">
-            </md-input-container>
-            <md-checkbox #showPassword><i class="material-icons">remove_red_eye</i></md-checkbox>
+        <div class="row">
+            <div class="col-6">
+                <md-input-container>
+                    <span mdTooltip="4-20 tecken">
+                        <input mdInput class="form-control"
+                               type="text"
+                               [type]="showPassword.checked ? 'text' : 'password'"
+                               [(ngModel)]="password"
+                               name="password"
+                               placeholder="Lösenord (4-20 tecken)"
+                               maxlength="20"
+                               minlength="4">
+                    </span>
+                </md-input-container>
+                <md-checkbox #showPassword><i class="material-icons">remove_red_eye</i></md-checkbox>
+            </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-6">
-            <input type="submit" name="submit" value="Registrera" (click)="registerUser()" />
+
+        <div class="row">
+            <div class="col-6">
+                <input type="submit"
+                       [disabled]="firstName == null || lastName == null || username == null || password == null || firstName.length < 2 || lastName.length < 2 || username.length < 4 || password.length < 4"
+                       name="submit"
+                       value="Registrera"
+                       (click)="registerUser()" />
+            </div>
         </div>
-    </div>
-</form>
+    </form>
+</div>
