Lagt på flex och snyggat till allt. Påbörjat designen av en toolbar

--- a/MeasureMyPike.Web/App/MeasureMyPike/src/Main.scss
+++ b/MeasureMyPike.Web/App/MeasureMyPike/src/Main.scss
@@ -22,7 +22,6 @@ textarea {
 
 .grid-container {
     width: 100%;
-    max-width: 1920px;
 }
 
 /*-- our cleafix hack -- */
@@ -134,4 +133,8 @@ textarea {
     .col-6 {
         width: 100%;
     }
+}
+
+[hidden] {
+    display: none;
 }
