--- a/MeasureMyPike.Web/App/MeasureMyPike/src/app/app.component.html
+++ b/MeasureMyPike.Web/App/MeasureMyPike/src/app/app.component.html
@@ -1,20 +1,24 @@
-<!--The whole content below can be removed with the new code.-->
-<md-sidenav-container class="example-container">
-    <md-sidenav #sidenav class="example-sidenav">
-        Jolly good!
-    </md-sidenav>
+<!--TODO: fixa hidden on not logged in-->
+<md-toolbar md-scroll-shrink [hidden]="loggedIn" style="border: thin; border-color: black;" fxLayoutAlign="center center">
+    <b>{{title}}</b>
+    <button type="button" md-icon-button>
+        <span mdTooltip="Din profil">
+            <md-icon>face</md-icon>
+        </span>
+    </button>
+    <button type="button" md-button>
+        <span mdTooltip="Ny fångst">
+            Ny fångst
+        </span>
+    </button>
+    <button type="button" md-icon-button>
+        <span style="text-align:right;" mdTooltip="Logga ut">
+            <md-icon>close</md-icon>
+        </span>
+    </button>
+</md-toolbar>
 
-    <div class="example-sidenav-content">
-        <button type="button" md-button (click)="sidenav.open()">
-            Open sidenav
-        </button>
-    </div>
-
-    <div class="grid-container">
-        <h1>
-            {{title}}
-        </h1>
-        <app-brand-view></app-brand-view>
-        <app-user-view></app-user-view>
-    </div>
-</md-sidenav-container>
+<div class="grid-container">
+    <!--<app-brand-view></app-brand-view>-->
+    <app-user-view></app-user-view>
+</div>
