--- a/MeasureMyPike.Web/App/MeasureMyPike/src/app/view/brand-view/brand-view.component.html
+++ b/MeasureMyPike.Web/App/MeasureMyPike/src/app/view/brand-view/brand-view.component.html
@@ -1,8 +1,6 @@
-﻿
-<h3>Dragmärken:</h3>
-
-<div class="row">
-    <div class="col-6" style="overflow: scroll; overflow-x: hidden; max-height: 400px; max-width: 400px;">
+﻿<div class="row" fxLayout="column" fxLayoutAlign="center center">
+    <h3>Dragmärken:</h3>
+    <div class="col-6 overflow-list" flex="grow">
         <ul class="list-group">
             <li class="list-group-item" [class.active]="selectedBrand?.id == brand.id" *ngFor="let brand of brandList" (click)="getBrand(brand)">
                 <p>{{brand.name}}</p>
@@ -12,14 +10,14 @@
 </div>
 
 <div>
-    <div class="row" *ngIf="selectedBrand != null">
+    <div class="row" *ngIf="selectedBrand != null" fxLayoutAlign="center center">
         <div class="col-6">
-            <p>Valt märke: <b>{{selectedBrand.name}}</b></p>
+            <p flex="grow" style="text-align:center;">Valt märke: <b>{{selectedBrand.name}}</b></p>
         </div>
     </div>
-    <div class="row" *ngIf="selectedBrand != null">
+    <div class="row" *ngIf="selectedBrand != null" fxLayout="column" fxLayoutAlign="center center" >
         <form name="brandChange">
-            <div class="col-6">
+            <div class="col-6" flex="grow">
                 <md-input-container>
                     <input mdInput type="text" [(ngModel)]="newName" name="newName" placeholder="Nytt namn" />
                 </md-input-container>
