--- a/MeasureMyPike.Web/App/MeasureMyPike/src/app/view/user-view/user-view.component.html
+++ b/MeasureMyPike.Web/App/MeasureMyPike/src/app/view/user-view/user-view.component.html
@@ -1,37 +1,54 @@
-﻿<h3>Registrera ny användare:</h3>
-
-<div [hidden]="submitted">
+﻿<div [hidden]="submitted" fxLayout="column" fxLayoutAlign="center center">
+    <h3>Registrera ny användare:</h3>
     <form name="userForm">
         <div class="row">
-            <div class="col-6">
+            <div class="col-6" flex="grow">
                 <md-input-container>
                     <span mdTooltip="2-25 tecken">
-                        <input mdInput type="text" [(ngModel)]="firstName" name="firstName" placeholder="Förnamn" maxlength="25" minlength="2">
+                        <input mdInput 
+                               type="text" 
+                               [(ngModel)]="firstName" 
+                               name="firstName" 
+                               placeholder="Förnamn" 
+                               maxlength="25" 
+                               minlength="2">
                     </span>
                 </md-input-container>
             </div>
         </div>
         <div class="row">
-            <div class="col-6">
+            <div class="col-6" flex="grow">
                 <md-input-container>
                     <span mdTooltip="2-25 tecken">
-                        <input mdInput type="text" [(ngModel)]="lastName" name="lastName" placeholder="Efternamn" maxlength="25" minlength="2">
+                        <input mdInput 
+                               type="text" 
+                               [(ngModel)]="lastName" 
+                               name="lastName" 
+                               placeholder="Efternamn" 
+                               maxlength="25" 
+                               minlength="2">
                     </span>
                 </md-input-container>
             </div>
         </div>
 
         <div class="row">
-            <div class="col-6">
+            <div class="col-6" flex="grow">
                 <md-input-container>
                     <span mdTooltip="4-20 tecken">
-                        <input mdInput type="text" [(ngModel)]="username" name="username" placeholder="Användarnamn" maxlength="20" minlength="4">
+                        <input mdInput 
+                               type="text" 
+                               [(ngModel)]="username"
+                               name="username" 
+                               placeholder="Användarnamn" 
+                               maxlength="20" 
+                               minlength="4">
                     </span>
                 </md-input-container>
             </div>
         </div>
         <div class="row">
-            <div class="col-6">
+            <div class="col-6" flex="grow">
                 <md-input-container>
                     <span mdTooltip="4-20 tecken">
                         <input mdInput class="form-control"
@@ -39,7 +56,7 @@
                                [type]="showPassword.checked ? 'text' : 'password'"
                                [(ngModel)]="password"
                                name="password"
-                               placeholder="Lösenord (4-20 tecken)"
+                               placeholder="Lösenord"
                                maxlength="20"
                                minlength="4">
                     </span>
@@ -49,7 +66,7 @@
         </div>
 
         <div class="row">
-            <div class="col-6">
+            <div class="col-6" flex="grow">
                 <input type="submit"
                        [disabled]="firstName == null || lastName == null || username == null || password == null || firstName.length < 2 || lastName.length < 2 || username.length < 4 || password.length < 4"
                        name="submit"
