--- a/MeasureMyPike.Web/App/MeasureMyPike/src/app/view/user-view/registerUser-view.component.html
+++ b/MeasureMyPike.Web/App/MeasureMyPike/src/app/view/user-view/registerUser-view.component.html
@@ -1,9 +1,9 @@
-﻿<div [hidden]="submitted" fxLayout="column" fxLayoutAlign="center center">
+﻿<div *ngIf="!submitted" fxLayout="column" fxLayoutAlign="center center">
     <h3>Registrera ny användare:</h3>
     <form name="userForm">
-        <div class="row">
-            <div class="col-6" flex="grow">
-                <md-input-container>
+        <div class="row" flex>
+            <div class="col-6">
+                <md-input-container class="wideInput">
                     <span mdTooltip="2-25 tecken">
                         <input mdInput 
                                type="text" 
@@ -16,9 +16,10 @@
                 </md-input-container>
             </div>
         </div>
-        <div class="row">
-            <div class="col-6" flex="grow">
-                <md-input-container>
+
+        <div class="row" flex>
+            <div class="col-6">
+                <md-input-container class="wideInput">
                     <span mdTooltip="2-25 tecken">
                         <input mdInput 
                                type="text" 
@@ -32,9 +33,9 @@
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-6" flex="grow">
-                <md-input-container>
+        <div class="row" flex>
+            <div class="col-6">
+                <md-input-container class="wideInput">
                     <span mdTooltip="4-20 tecken">
                         <input mdInput 
                                type="text" 
@@ -47,8 +48,9 @@
                 </md-input-container>
             </div>
         </div>
-        <div class="row">
-            <div class="col-6" flex="grow">
+
+        <div class="row" flex>
+            <div class="col-6">
                 <md-input-container>
                     <span mdTooltip="4-20 tecken">
                         <input mdInput class="form-control"
@@ -65,8 +67,8 @@
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-6" flex="grow">
+        <div class="row" flex>
+            <div class="col-6">
                 <input type="submit"
                        [disabled]="firstName == null || lastName == null || username == null || password == null || firstName.length < 2 || lastName.length < 2 || username.length < 4 || password.length < 4"
                        name="submit"
