--- a/MeasureMyPike.Web/App/MeasureMyPike/src/app/app.component.html
+++ b/MeasureMyPike.Web/App/MeasureMyPike/src/app/app.component.html
@@ -1,37 +1,3 @@
-﻿<!--TODO: fixa hidden on not logged in-->
-<md-toolbar md-scroll-shrink [hidden]="loggedIn" style="border: thin; border-color: black;" fxLayoutAlign="center center">
-    <b style="padding-right:5px;">{{title}}</b>
-    <nav>
-        <span *ngIf="!loggedIn()" mdTooltip="Logga in">
-            <a routerLink="/login" routerLinkActive="active">
-                <md-icon>face</md-icon>
-            </a>
-        </span>
-
-        <span *ngIf="loggedIn()" mdTooltip="Din profil">
-            <a routerLink="/user" routerLinkActive="active">
-                <md-icon>face</md-icon>
-            </a>
-        </span>
-
-        <!--TODO: Fixa catch i frontend-->
-        <!--<span mdTooltip="Ny fångst">
-            <a routerlink="/user">
-                <md-icon>add</md-icon>
-            </a>
-        </span>-->
-        <span *ngIf="loggedIn()" style="text-align:right;" mdTooltip="Dragmärken">
-            <a routerLink="/brands" routerLinkActive="active">
-                <md-icon>list</md-icon>
-            </a>
-        </span>
-
-        <button *ngIf="loggedIn()" type="button" (click)="logout()" md-icon-button>
-            <span style="text-align:right;" mdTooltip="Logga ut">
-                <md-icon>close</md-icon>
-            </span>
-        </button>
-    </nav>
-</md-toolbar>
+﻿<toolbar-component></toolbar-component>
 
 <router-outlet></router-outlet>
