--- a/MeasureMyPike.Web/App/MeasureMyPike/src/app/view/home-view/home-view.component.html
+++ b/MeasureMyPike.Web/App/MeasureMyPike/src/app/view/home-view/home-view.component.html
@@ -1,1 +1,83 @@
-﻿
+﻿<div fxLayout="column">
+    <div fxLayoutAlign="center stretch">
+        <p style="max-width: 400px; overflow-wrap: normal; padding-left: 15px; padding-right: 15px; font-size: 14px; text-align: justify;">
+            <b style="font-size: 18px;">Gäddfiske</b>
+            <br />
+            Gäddfiskare är ett konstigt släkte. De fångar en fisk som inte är god, eller lätt att äta. De släpper tillbaka gäddorna i vattnet där de fångades, utan att skada dem.
+            Detta trotts att de är en rovfisk som kommer att äta upp den goda fisken som finns i vattendraget.
+            <br /><br />
+        </p>
+    </div>
+    <div fxLayout="row" fxLayout.sm="column" fxLayout.xs="column" fxLayoutAlign="center center">
+        <div fxFlex="30" fxLayoutAlign="center stretch">
+            <table fxFill name="biggestFish" mdSort (mdSortChange)="sortData($event)">
+                <tr>
+                    <th md-sort-header="weight">Kilo</th>
+                    <th md-sort-header="length">Längd (cm)</th>
+                    <th md-sort-header="lake">Vattendrag</th>
+                    <th md-sort-header="user">Användare</th>
+                </tr>
+                <!--<tr *ngFor="let fish of biggestFishList">-->
+                <tr>
+                    <td>12</td>
+                    <td>55</td>
+                    <td>Storsjön</td>
+                    <td>hostf</td>
+                </tr>
+                <tr>
+                    <td>17</td>
+                    <td>90</td>
+                    <td>Käppesjön</td>
+                    <td>hostf</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>30</td>
+                    <td>Mälaren</td>
+                    <td>hostf</td>
+                </tr>
+                <tr>
+                    <td>40</td>
+                    <td>150</td>
+                    <td>Östersjön</td>
+                    <td>hostf</td>
+                </tr>
+            </table>
+        </div>
+        <div fxFlex="30" fxLayoutAlign="center stretch">
+            <table fxFill name="biggestFish" mdSort (mdSortChange)="sortData($event)">
+                <tr>
+                    <th md-sort-header="weight">Kilo</th>
+                    <th md-sort-header="length">Längd (cm)</th>
+                    <th md-sort-header="lake">Vattendrag</th>
+                    <th md-sort-header="user">Användare</th>
+                </tr>
+                <!--<tr *ngFor="let fish of biggestFishList">-->
+                <tr>
+                    <td>12</td>
+                    <td>55</td>
+                    <td>Storsjön</td>
+                    <td>hostf</td>
+                </tr>
+                <tr>
+                    <td>17</td>
+                    <td>90</td>
+                    <td>Käppesjön</td>
+                    <td>hostf</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>30</td>
+                    <td>Mälaren</td>
+                    <td>hostf</td>
+                </tr>
+                <tr>
+                    <td>40</td>
+                    <td>150</td>
+                    <td>Östersjön</td>
+                    <td>hostf</td>
+                </tr>
+            </table>
+        </div>
+    </div>
+</div>
