Tagit bort grid och kör nu helt på flex

--- a/MeasureMyPike.Web/App/MeasureMyPike/src/app/app.component.scss
+++ b/MeasureMyPike.Web/App/MeasureMyPike/src/app/app.component.scss
@@ -1,20 +1,1 @@
-﻿:host /deep/ .mat-icon {
-    vertical-align:  middle;
-}
-
-:host /deep/ .mat-icon-button {
-    height: 24px;
-    width: 24px;
-}
-
-a {
-    text-decoration: none;
-}
-
-a:visited{
-    color: black;
-}
-
-.menu-padding {
-    padding-right:3px;
-}
+﻿
