--- a/MeasureMyPike.Web/App/MeasureMyPike/src/app/view/brand-view/brand-view.component.html
+++ b/MeasureMyPike.Web/App/MeasureMyPike/src/app/view/brand-view/brand-view.component.html
@@ -1,28 +1,21 @@
-﻿<div class="row" fxLayout="column" fxLayoutAlign="center center">
+﻿<div fxLayout="column" fxLayoutAlign="center center">
     <h3>Dragmärken:</h3>
-    <div class="col-6 overflow-list" flex="grow">
+    <div class="overflow-list" fxFill fxFlex="100">
         <md-list>
             <md-list-item [class.active]="selectedBrand?.id == brand.id" *ngFor="let brand of brandList" (click)="getBrand(brand)">
                 <p>{{brand.name}}</p>
             </md-list-item>
         </md-list>
-</div>
-</div>
-
-<div>
-    <div class="row" *ngIf="selectedBrand != null" fxLayoutAlign="center center">
-        <div class="col-6">
-            <p flex="grow" style="text-align:center;">Valt märke: <b>{{selectedBrand.name}}</b></p>
-        </div>
     </div>
-    <div class="row" *ngIf="selectedBrand != null" fxLayout="column" fxLayoutAlign="center center" >
+    <div *ngIf="selectedBrand != null">
+            <p style="text-align:center;">Valt märke: <b>{{selectedBrand.name}}</b></p>
+    </div>
+    <div *ngIf="selectedBrand != null" fxLayout="column">
         <form name="brandChange">
-            <div class="col-6" flex="grow">
                 <md-input-container>
                     <input mdInput type="text" [(ngModel)]="newName" name="newName" placeholder="Nytt namn" />
                 </md-input-container>
                 <button md-raised-button [disabled]="newName == null" (click)="updateBrand()">Ändra</button>
-            </div>
         </form>
     </div>
 </div>
