--- a/MeasureMyPike.Web/App/MeasureMyPike/src/app/view/user-view/Login/userLogin-view.component.html
+++ b/MeasureMyPike.Web/App/MeasureMyPike/src/app/view/user-view/Login/userLogin-view.component.html
@@ -1,45 +1,37 @@
 ﻿<div fxLayout="column" fxLayoutAlign="center center">
     <h3>Logga in:</h3>
-    <div>
-        <form name="loginForm">
-            <div class="row" flex>
-                <div class="col-6">
-                    <md-input-container class="wideInput">
-                        <input mdInput
-                               type="text"
-                               [(ngModel)]="username"
-                               name="username"
-                               placeholder="Användarnamn" />
-                    </md-input-container>
-                </div>
-            </div>
-
-            <div class="row" flex>
-                <div class="col-6">
-                    <md-input-container>
-                        <input mdInput class="form-control"
-                               type="text"
-                               [type]="showPassword.checked ? 'text' : 'password'"
-                               [(ngModel)]="password" 
-                               name="password"
-                               placeholder="Lösenord" />
-                    </md-input-container>
-                    <md-checkbox #showPassword><i class="material-icons">remove_red_eye</i></md-checkbox>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-6">
-                    <input type="submit"
-                           [disabled]="username == null || password == null || username.length < 4 || password.length < 4"
-                           name="submit"
-                           value="Logga in"
-                           (click)="login($event)" />
-                </div>
-            </div>
-        </form>
-        <div class="row">
-            <a [routerLink]="['/signup']"><p>Click here to Signup</p></a>
+    <form name="loginForm">
+        <div>
+            <md-input-container class="wideInput">
+                <input mdInput
+                       type="text"
+                       [(ngModel)]="username"
+                       name="username"
+                       placeholder="Användarnamn" />
+            </md-input-container>
         </div>
+
+        <div>
+            <md-input-container>
+                <input mdInput class="form-control"
+                       type="text"
+                       [type]="showPassword.checked ? 'text' : 'password'"
+                       [(ngModel)]="password"
+                       name="password"
+                       placeholder="Lösenord" />
+            </md-input-container>
+            <md-checkbox #showPassword><i class="material-icons">remove_red_eye</i></md-checkbox>
+        </div>
+
+        <div>
+            <input type="submit"
+                   [disabled]="username == null || password == null || username.length < 4 || password.length < 4"
+                   name="submit"
+                   value="Logga in"
+                   (click)="login($event)" />
+        </div>
+    </form>
+    <div>
+        <a [routerLink]="['/signup']"><p>Registrera konto här</p></a>
     </div>
 </div>
