--- a/MeasureMyPike.Web/App/MeasureMyPike/src/app/view/user-view/Register/userRegister-view.component.html
+++ b/MeasureMyPike.Web/App/MeasureMyPike/src/app/view/user-view/Register/userRegister-view.component.html
@@ -1,56 +1,52 @@
-﻿<div *ngIf="!submitted" fxLayout="column" fxLayoutAlign="center center">
+﻿<div fxLayout="column" fxLayoutAlign="center center">
     <h3>Registrera ny användare:</h3>
     <form name="userForm">
-        <div class="row" flex>
-            <div class="col-6">
-                <md-input-container class="wideInput">
+        <div fxLayout="column">
+            <div fxFlex="48" fxFill fxLayout="column">
+                <md-input-container>
                     <span mdTooltip="2-25 tecken">
-                        <input mdInput 
-                               type="text" 
-                               [(ngModel)]="firstName" 
-                               name="firstName" 
-                               placeholder="Förnamn" 
-                               maxlength="25" 
+                        <input mdInput
+                               type="text"
+                               [(ngModel)]="firstName"
+                               name="firstName"
+                               placeholder="Förnamn"
+                               maxlength="25"
+                               minlength="2">
+                    </span>
+                </md-input-container>
+            </div>
+
+            <div fxFlex="70" fxFill fxLayout="column">
+                <md-input-container>
+                    <span mdTooltip="2-25 tecken">
+                        <input mdInput
+                               type="text"
+                               [(ngModel)]="lastName"
+                               name="lastName"
+                               placeholder="Efternamn"
+                               maxlength="25"
                                minlength="2">
                     </span>
                 </md-input-container>
             </div>
         </div>
 
-        <div class="row" flex>
-            <div class="col-6">
-                <md-input-container class="wideInput">
-                    <span mdTooltip="2-25 tecken">
-                        <input mdInput 
-                               type="text" 
-                               [(ngModel)]="lastName" 
-                               name="lastName" 
-                               placeholder="Efternamn" 
-                               maxlength="25" 
-                               minlength="2">
-                    </span>
-                </md-input-container>
-            </div>
-        </div>
-
-        <div class="row" flex>
-            <div class="col-6">
-                <md-input-container class="wideInput">
+        <div fxLayout="column">
+            <div fxFlex="70" fxFill fxLayout="column">
+                <md-input-container>
                     <span mdTooltip="4-20 tecken">
-                        <input mdInput 
-                               type="text" 
+                        <input mdInput
+                               type="text"
                                [(ngModel)]="username"
-                               name="username" 
-                               placeholder="Användarnamn" 
-                               maxlength="20" 
+                               name="username"
+                               placeholder="Användarnamn"
+                               maxlength="20"
                                minlength="4">
                     </span>
                 </md-input-container>
             </div>
-        </div>
 
-        <div class="row" flex>
-            <div class="col-6">
+            <div fxFlex="70" fxFill fxLayout="row" fxLayoutAlign="center center">
                 <md-input-container>
                     <span mdTooltip="4-20 tecken">
                         <input mdInput class="form-control"
@@ -64,17 +60,13 @@
                     </span>
                 </md-input-container>
                 <md-checkbox #showPassword><i class="material-icons">remove_red_eye</i></md-checkbox>
-            </div>
-        </div>
 
-        <div class="row" flex>
-            <div class="col-6">
-                <input type="submit"
-                       [disabled]="firstName == null || lastName == null || username == null || password == null || firstName.length < 2 || lastName.length < 2 || username.length < 4 || password.length < 4"
-                       name="submit"
-                       value="Registrera"
-                       (click)="registerUser()" />
             </div>
         </div>
+        <input type="submit"
+               [disabled]="firstName == null || lastName == null || username == null || password == null || firstName.length < 2 || lastName.length < 2 || username.length < 4 || password.length < 4"
+               name="submit"
+               value="Registrera"
+               (click)="registerUser()" />
     </form>
 </div>
