--- a/MeasureMyPike.Web/App/MeasureMyPike/src/app/view/brand-view/brand-view.component.html
+++ b/MeasureMyPike.Web/App/MeasureMyPike/src/app/view/brand-view/brand-view.component.html
@@ -1,21 +1,30 @@
-﻿<div fxLayout="column" fxLayoutAlign="center center">
-    <h3>Dragmärken:</h3>
-    <div class="overflow-list" fxFill fxFlex="100">
-        <md-list>
-            <md-list-item [class.active]="selectedBrand?.id == brand.id" *ngFor="let brand of brandList" (click)="getBrand(brand)">
-                <p>{{brand.name}}</p>
-            </md-list-item>
-        </md-list>
+﻿<div fxLayout="column" fxLayoutAlign="center stretch">
+    <div fxLayout="row" fxLayoutAlign="center center">
+        <h3>Dragmärken:</h3>
     </div>
-    <div *ngIf="selectedBrand != null">
-            <p style="text-align:center;">Valt märke: <b>{{selectedBrand.name}}</b></p>
+
+    <div fxLayout="row" fxLayoutAlign="center center">
+        <div fxLayout="column" fxFlex="255px" fxLayoutAlign="center stretch">
+            <md-list fxFlex="500px" style="border: thin; border-color: black; border-style: solid; overflow: auto;">
+                <md-list-item [class.active]="selectedBrand?.id == brand.id" *ngFor="let brand of brandList" (click)="getBrand(brand)">
+                    <p>{{brand.name}}</p>
+                </md-list-item>
+            </md-list>
+        </div>
     </div>
-    <div *ngIf="selectedBrand != null" fxLayout="column">
-        <form name="brandChange">
+
+    <div fxLayout="row" fxLayoutAlign="center center" *ngIf="selectedBrand != null">
+        <div fxLayout="column" fxFlex="255px" fxLayoutAlign="center stretch">
+            <div *ngIf="selectedBrand != null">
+                <p style="text-align:center;">Valt märke: <b>{{selectedBrand.name}}</b></p>
+            </div>
+
+            <form name="brandChange">
                 <md-input-container>
                     <input mdInput type="text" [(ngModel)]="newName" name="newName" placeholder="Nytt namn" />
                 </md-input-container>
-                <button md-raised-button [disabled]="newName == null" (click)="updateBrand()">Ändra</button>
-        </form>
+                <button type="submit" md-raised-button [disabled]="newName == null" (click)="updateBrand()">Ändra</button>
+            </form>
+        </div>
     </div>
 </div>
