Vidare jobb med profilsida och routing till profilerna.
Börjar se ut som något.

--- a/MeasureMyPike.Web/App/MeasureMyPike/src/app/common/saveChanges/saveChangesDialog.component.html
+++ b/MeasureMyPike.Web/App/MeasureMyPike/src/app/common/saveChanges/saveChangesDialog.component.html
@@ -1,4 +1,4 @@
-﻿<md-dialog-content>Vill du verkligen logga ut?</md-dialog-content>
+﻿<md-dialog-content>Vill du spara ändringarna?</md-dialog-content>
 <md-dialog-actions>
     <button md-button [md-dialog-close]="true">Ja</button>
     <!-- Can optionally provide a result for the closing dialog. -->
